--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -10,19 +10,20 @@
 }
 
 .loader-container > .loader {
-    width: 8rem;
-    height: 8rem;
+    width: 9rem;
+    height: 9rem;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+    background-color: white;
 }
 
 .loader-container > .loader > .title {
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
     display: flex;
-    background-color: rgba(74, 166, 226, 0.3);
+    /* background-color: rgba(74, 166, 226, 0.3); */
     align-items: center;
     justify-content: center;
     border-radius: 50%;
@@ -31,8 +32,8 @@
 
 .loader-container > .loader > .ring {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
     border-radius: 50%;
     border: 4px solid #5a9dc9;
     box-sizing: content-box;
