--- a/src/components/history/history.css
+++ b/src/components/history/history.css
@@ -32,6 +32,17 @@
     background-color: #eff9ff;
 }
 
+.history > .history-content > .no-history {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.4rem;
+    color: #969696;
+}
+
 .history > .history-content .history-item {
     height: 7vh;
     min-height: 40px;
