UI update, add gh-pages dev dependency to publish to github pages, build update v3

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -23,6 +23,7 @@
     background-color: #939393;
     color: white;
     background-color: #4aa6e2;
+    font-size: 1.2rem;
 }
 
 .content > .wrapper {
