--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 html, body, #root {
   width: 100%;
+  min-width: 1040px;
   height: 100%;
+  min-height: 440px;
   margin: 0;
   user-select: none;
   -webkit-user-select: none;
