--- a/src/components/Selections/Selections.css
+++ b/src/components/Selections/Selections.css
@@ -15,6 +15,7 @@
     background-color: #58b8e4;
     color: white;
     padding-left: 1.4rem;
+    font-size: 1.2rem;
   }
   
   .slider-container {
